# PixelFlasher

./: .gitignore  .mcp.json  AGENTS.md  constants.py  phone.py  pyproject.toml  requirements.txt
.github/workflows/: mac.yml
pixel_flasher_plugin/: README.md  __init__.py  app_backup.py  boot_patcher.py  command_validator.py  device_ops.py  headless_runtime.py  mcp_resources.py  mcp_server.py  output_models.py  package_backup.py  restic_backup.py  result_types.py  safety_engine.py  telemetry.py
pixel_flasher_plugin/tests/: conftest.py  test_app_backup.py  test_boot_patcher.py  test_command_injection.py  test_command_validator.py  test_device_ops.py  test_headless_bootstrap.py  test_keybox.py  test_mcp_tools.py  test_modules.py  test_package_backup.py  test_phone_contract.py  test_phone_module_ops.py  test_pi_verdict.py  test_restic_backup.py  test_safety_engine.py  test_write_tools.py
scripts/: review_upstream_sync.py  sync_upstream.py
