[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelflasher-mcp"
version = "9.1.1.2"
description = "Headless MCP server for PixelFlasher device operations"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
# The headless MCP server imports PixelFlasher's own runtime.py / phone.py /
# config.py, so it needs the app's non-GUI runtime dependencies. wxPython is
# deliberately EXCLUDED -- headless_runtime.py installs a wx stub before those
# imports, so the GUI toolkit is never actually loaded (and building wxPython
# on macOS is painful). PyInstaller / pyinstaller-versionfile are build-only
# and also excluded. Everything else mirrors requirements.txt so a fresh
# machine (`uv sync`) reproduces a working headless environment.
dependencies = [
    "mcp>=1.28.1",
    "pydantic>=2.0",
    "requests>=2.28.1",
    "attrdict3>=2.0.2",
    "httplib2>=0.21.0",
    "platformdirs==3.6.0",
    "darkdetect>=0.7.1",
    "markdown>=3.4.1",
    "pyperclip>=1.8.2",
    "protobuf~=6.31.1",
    "six>=1.16.0",
    "bsdiff4>=1.1.5",
    "lz4>=4.3.2",
    "psutil>=5.9.5",
    "json5>=0.9.14",
    "bs4>=0.0.1",
    "chardet>=5.2.0,<7",
    "cryptography>=42.0.5",
    "rsa>=4.9",
    "polib>=1.1.1",
    "packaging>=21.0",
]

[project.scripts]
pixelflasher-mcp = "pixel_flasher_plugin.mcp_server:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pixel_flasher_plugin*"]
exclude = ["pixel_flasher_plugin.tests*"]
